@@ -6,7 +6,12 @@ Editableform based on jQuery UI
     
     $.extend($.fn.editableform.Constructor.prototype, {
         initButtons: function() {
-            this.$form.find('.editable-buttons').append($.fn.editableform.buttons);                
+            var $btn = this.$form.find('.editable-buttons');
+            $btn.append($.fn.editableform.buttons);
+            if(this.options.showbuttons === 'bottom') {
+                $btn.addClass('editable-buttons-bottom');
+            }
+                          
             this.$form.find('.editable-submit').button({
                 icons: { primary: "ui-icon-check" },
                 text: false
